// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowList failure 1`] = `
<div>
  <h3>
    Workflows
  </h3>
  <div
    className="alert alert-danger"
    role="alert"
  >
    some error message
  </div>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Schedule Active
        </th>
        <th>
          Schedule
        </th>
        <th>
          Tasks
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="4"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WorkflowList loading 1`] = `
<div>
  <h3>
    Workflows
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Schedule Active
        </th>
        <th>
          Schedule
        </th>
        <th>
          Tasks
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="4"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WorkflowList success 1`] = `
<div>
  <h3>
    Workflows
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Schedule Active
        </th>
        <th>
          Schedule
        </th>
        <th>
          Tasks
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <a
            onClick={[Function]}
            style={Object {}}
          >
            Big Ol' Workflow Example
          </a>
        </td>
        <td>
          False
        </td>
        <td>
          (none)
        </td>
        <td>
          30
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
